chore: renombrar joc a 'El Llindar Trencat'